# nginx-auto-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  terminal
.github/workflows/: ci-cd.yml
app/: main.py
docker/: Dockerfile
nginx/: nginx.conf
